src/styles/global.css
:root {
  --blue: #66cfe7;
  --white: #ffffff;
  --orange: #ff5c00;
  --green: rgb(36, 194, 36);
}
body {
  position: relative;
  min-height: 100vh;
  margin: 0;
  padding: 0;
  padding-bottom: 100px;
  box-sizing: border-box;
}

body {
  font-family: "Cabin", sans-serif;
  font-size: 18px;
  color: 18191a;
  padding-top: 60px;
}

/* =============== a11y ================= */
.skip-link {
  padding: 1em 2em;
  background-color: hsl(0, 100%, 100%);
  z-index: 101;
  clip: rect(0, 0, 0, 0);
  overflow: hidden;
  position: absolute;
  top: 0.3em;
}
.skip-link:focus {
  clip: auto;
  overflow: unset;
}

/* ===================== TEXT STYLING ======================*/

p {
  line-height: 2em;
}

blockquote {
  position: relative;
  padding-left: 1em;
  border-left: 0.2em solid var(--blue);
  font-size: 2em;
  line-height: 1.5em;
  font-weight: 100;
}

/* HEADINGS */

h1,
h2 {
  font-family: "Oswald", sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  margin: 0;
  margin-bottom: 20px;
}

h1 {
  font-size: 4rem;
}

h2 {
  font-size: 3.5rem;
}

h3,
h4 {
  font-family: "Cabin", sans-serif;
  margin: 20px 0;
  font-weight: 500;
}

h3 {
  font-size: 2rem;
}

h4 {
  font-size: 1.5rem;
}

/* HIGHLIGHTS */

h1 .highlight.blue {
  box-shadow: inset 0 -10px 0 0 white, inset 0 -40px 0 0 #66cfe7;
}

h1 .highlight.green {
  box-shadow: inset 0 -10px 0 0 white, inset 0 -40px 0 0 rgb(36, 194, 36);
}

h1 .highlight.orange {
  box-shadow: inset 0 -10px 0 0 white, inset 0 -40px 0 0 #ff5c00;
}

h2 .highlight.blue {
  box-shadow: inset 0 -5px 0 0 white, inset 0 -25px 0 0 #66cfe7;
}

h2 .highlight.green {
  box-shadow: inset 0 -5px 0 0 white, inset 0 -25px 0 0 rgb(36, 194, 36);
}

h2 .highlight.orange {
  box-shadow: inset 0 -5px 0 0 white, inset 0 -25px 0 0 #ff5c00;
}

h3 .highlight.blue,
h4 .highlight.blue {
  box-shadow: inset 0 0px 0 0 white, inset 0 -15px 0 0 #66cfe7;
}

h3 .highlight.green,
h4 .highlight.green {
  box-shadow: inset 0 0px 0 0 white, inset 0 -15px 0 0 rgb(36, 194, 36);
}

h3 .highlight.orange,
h4 .highlight.orange {
  box-shadow: inset 0 0px 0 0 white, inset 0 -15px 0 0 #ff5c00;
}

/*================== STRUCTURE COMPONENTS ======================== */
/* Main page structure */
main {
  margin-bottom: 40px;
}

section {
  position: relative;
  width: 90%;
  margin: auto;
  padding: 20px 0;
}

/* Secondary page segment */

.middle-segment {
  position: relative;
  background-color: #b9ffff50;
}

/* Images */

img {
  width: 100%;
  border-radius: 30px;
}

img.graph {
  border-radius: 0;
}

img.full-height {
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  height: 100%;
  transform: translate(-50%, -50%);
  width: auto;
}

.long-image-container {
  position: relative;
  overflow: hidden;
  height: 100%;
  border-radius: 30px;
}

/* Bubbles */
.bubble-img {
  width: 10%;
  border: 5px solid white;
  border-radius: 100%;
  padding: 10px;
  background-color: #110077;
  display: none;
  overflow: visible;
}

.bubble-img img {
  position: relative;
  top: 5px;
  border-radius: 0;
}

.bubble {
  background-color: #110077;
  border-radius: 30px;
  padding: 10px 70px;
  color: white;
  box-sizing: border-box;
  margin: 10px;
}

@media only screen and (min-width: 992px) {
  #front-page-3 {
    max-width: 100%;
  }
  .bubbles {
    margin: 20px 0;
    display: grid;
    grid-gap: 50px;
    max-width: 100%;
  }
  .bubble {
    box-sizing: border-box;
    position: relative;
    grid-column-start: 2;
    grid-column-end: 2;
  }
  .bubbles div:nth-child(1) {
    grid-column-start: 1;
    grid-column-end: 1;
    grid-row-start: 1;
    grid-row-end: 3;
  }
  .bubble-img {
    display: block;
    position: absolute;
    left: -45px;
    top: 20px;
  }
}

@media only screen and (min-width: 992px) {
  .two-column-section {
    display: flex;
    justify-content: space-between;
  }

  .two-column-section.reversed {
    flex-direction: row-reverse;
    justify-content: space-between;
  }
  .column {
    flex-basis: 45%;
    margin: 0% 0%;
  }

  .third-column {
    flex-basis: 30%;
    margin: 0% 0%;
  }
}

/* Heading floats */
@media only screen and (min-width: 992px) {
  .right-side {
    width: 100%;
    display: flex;
    justify-content: flex-end;
  }
  .right-side h2 {
    display: block;
    max-width: 600px;
    text-align: right;
  }
}

/* Diagonal headings */

@media only screen and (min-width: 992px) {
  .diagonal-box {
    display: flex;
    flex-direction: column;
  }
  .diagonal-box :nth-child(1) {
    align-self: flex-start;
  }
  .diagonal-box :nth-child(2) {
    align-self: center;
  }
  .diagonal-box :nth-child(3) {
    align-self: flex-end;
  }
}

/* Blog display */

.article-body img {
  max-width: 80%;
}

.article-body h2 {
  font-family: "Cabin", sans-serif;
  text-transform: none;
  font-size: 2.5em;
}

/* .article-body img.odd {
  float: right;
  margin-left: 30px;
} */

/* Blog feed */
/* .blog-display * {
  margin: 0;
} */

.article-feed-sidebar {
  min-width: 20%;
  max-width: 400px;
  padding: 0 20px;
}

.article-feed-sidebar img {
  max-height: 200px;
  object-fit: cover;
}

.article-link {
  text-decoration: none;
  color: black;
}

.article-feed-sidebar article {
  box-sizing: border-box;
  margin-bottom: 30px;
}

.article-feed-sidebar article:hover {
  box-shadow: -18px 0 0 0 white, -23px 0 0 0 var(--orange);
}
.sample * {
  display: none;
}

.article-feed-sidebar .primary-link {
  float: right;
  margin-right: 0;
}

/* .sample p:nth-child(1) {
  display: inline-block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
} */

@media only screen and (min-width: 992px) {
  .full-page-article {
    max-width: 70%;
  }
  .blog-display {
    display: flex;
    justify-content: center;
  }
}
/* ... */

